[package]
name = "flash-loan-mastery"
version = "0.1.0"
description = "Simple and best flash loan program :)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_loan_mastery"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = {version = "1.0.5", features = ["no-entrypoint"]}
solana-security-txt = "1.0.2"
